fixes green button spacing

--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@
 .green{
     background-color: #32cd32;
     border-color:#32cd32;
+    margin:5px;
 }
 
 .card{
